syntax = "proto3";
package types;

option go_package = "./pkg/types/proto";

message ScrapingTask {
  string url = 1;
  map<string, string> selectors = 2;
  string id = 3;
  map<string, string> headers = 4;
  string method = 5;
}

message ScrapingResult {
  string task_id = 1;
  string url = 2;
  map<string, string> data = 3;
  int64 timestamp = 4;
  int64 duration = 5;
  string error = 6;
  int32 status_code = 7;
  bool from_cache = 8;
}

message AddTasksRequest {
  repeated ScrapingTask tasks = 1;
}

message AddTasksResponse {
  repeated string ids = 1;
}

message GetResultsByIdsRequest {
  repeated string task_ids = 1;
}

message GetResultsByIdsResponse {
  repeated ScrapingResult results = 1;
}

service ScraperService {
  rpc AddTasks(AddTasksRequest) returns (AddTasksResponse);
  rpc GetResultsByIds(GetResultsByIdsRequest) returns (GetResultsByIdsResponse);
}
